.provarCaches/00D5f000005vwGkEAI/objects/rstkf__paysession__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_paysession</customHelpPage>
    <description>paysession__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__paysession_glcmp__r.Name + &apos;-&apos; + rstkf__paysession_sessionid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_apexjobid__c</fullName>
        <description>Apex Job Id</description>
        <inlineHelpText>Apex Job Id</inlineHelpText>
        <label>Apex Job Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_checkdate__c</fullName>
        <inlineHelpText>The date that will be used in check printing for those items being paid by check and that are selected for payment from this Payment Selection Session</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_chkcomments__c</fullName>
        <inlineHelpText>User-defined comments used for the check batch resulting from this Payment Selection Session, up to 100 characters in length</inlineHelpText>
        <label>Check Session Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_comments__c</fullName>
        <inlineHelpText>User-defined comments pertaining to this Payment Selection Session, up to 255 characters in length</inlineHelpText>
        <label>Session Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_cutoffdate__c</fullName>
        <inlineHelpText>When Date Selection selected is &apos;By Due Date&apos; enter the cutoff date for what will be included in this Payment Selection Session</inlineHelpText>
        <label>Due Date Cutoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_datesel__c</fullName>
        <inlineHelpText>Set to &apos;All&apos; to select all eligible Payable transactions or set to &apos;By Due Date&apos;, which selects only those due on or before the &apos;Due Date Cutoff&apos; entered.</inlineHelpText>
        <label>Date Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>By Due Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__paysession_doterms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Terms discounts are applied if the payment date falls within the discount period.</inlineHelpText>
        <label>Take Advantage of Terms Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_exppaydate__c</fullName>
        <inlineHelpText>The date that will be used for discount inclusion</inlineHelpText>
        <label>Expected Payment Date (for Discounts)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_firstcheckno__c</fullName>
        <inlineHelpText>The first check number that will be assigned to payable items selected for payment where pay type = Check</inlineHelpText>
        <label>Starting Check Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_frompayto__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created From PAYTO</description>
        <label>Created From PAYTO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_glbankacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Bank Account to be used for making payments associated with this Payment Selection Session</inlineHelpText>
        <label>Bank Account</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Payment Selection Session</relationshipLabel>
        <relationshipName>paysessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Financial Company for which this session is being executed.  Note that only one &quot;active&quot; session is allowed per Financial Company at any given time.</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Payment Selection Session</relationshipLabel>
        <relationshipName>paysessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>Payment Selection Session</relationshipLabel>
        <relationshipName>paysessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_havechecks__c</fullName>
        <label>Have Checks in this Batch</label>
        <summaryFilterItems>
            <field>rstkf__paysessvend__c.rstkf__paysessvend_paytype__c</field>
            <operation>equals</operation>
            <value>Check</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__paysessvend__c.rstkf__paysessvend_handcheckind__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__paysessvend__c.rstkf__paysessvend_totnetpay__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__paysessvend__c.rstkf__paysessvend_paysession__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_haveefts__c</fullName>
        <label>Have EFT&apos;s in this batch</label>
        <summaryFilterItems>
            <field>rstkf__paysessvend__c.rstkf__paysessvend_paytype__c</field>
            <operation>equals</operation>
            <value>EFT</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__paysessvend__c.rstkf__paysessvend_totnetpay__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__paysessvend__c.rstkf__paysessvend_paysession__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_homesyforexschedno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field contains a reference to the override Exchange Rate Schedule that may be used in a Payment Session to get the rate to convert the amounts in Bank Currency to the Home Currency.</inlineHelpText>
        <label>Bank to Home Exchange Rate Schedule</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Payment Selection Session</relationshipLabel>
        <relationshipName>paysessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_inclcredits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include Vendor Credits</description>
        <label>Include Vendor Credits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_includehold__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, any Invoices currently on hold will be included in this Payment Selection Session.  Default is unchecked.</inlineHelpText>
        <label>Include Invoices on Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_lastcheckno__c</fullName>
        <label>Last Check Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_laststatuschg__c</fullName>
        <inlineHelpText>The date and time that any record in this Payment Selection Session was last modified within this session</inlineHelpText>
        <label>Date &amp; Time of Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_netopenamt__c</fullName>
        <label>Net Open Amount - Bank Currency</label>
        <summarizedField>rstkf__paysessvend__c.rstkf__paysessvend_netopenamtbank__c</summarizedField>
        <summaryForeignKey>rstkf__paysessvend__c.rstkf__paysessvend_paysession__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_netopenamtnumb__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net Open Amount - Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_numbinv__c</fullName>
        <inlineHelpText>Number of Invoices in this Payment Selection Session</inlineHelpText>
        <label>Number of Invoices</label>
        <summarizedField>rstkf__paysessvend__c.rstkf__paysessvend_numbinv__c</summarizedField>
        <summaryForeignKey>rstkf__paysessvend__c.rstkf__paysessvend_paysession__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_password__c</fullName>
        <inlineHelpText>This can be set by a user, if desired.  When set, other users must enter the password when entering the session to make changes but the originating user is not required to re-enter it.</inlineHelpText>
        <label>Session Password</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_paymenttype__c</fullName>
        <inlineHelpText>Select the Pay Types desired to be paid in this Payment Selection Session.  Options are

All
Check
Cash
EFT
Credit Card
Bank Card</inlineHelpText>
        <label>Pay Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Bank Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__paysession_period__c</fullName>
        <label>Fiscal Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_povclass__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The user can optionally select a Vendor Class to be paid and when selected, all the eligible Payable Transactions for that Vendor Class will be included in the Payment Selection Session.</inlineHelpText>
        <label>Vendor Class</label>
        <referenceTo>rstk__povclass__c</referenceTo>
        <relationshipLabel>Payment Selection Session</relationshipLabel>
        <relationshipName>paysessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_respuser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When Vendor Selection is set to &apos;By AP Responsible User&apos;, enter the AP Responsible User that represents those Vendors you wish to include in this Payment Selection Session</inlineHelpText>
        <label>AP Responsible User</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Payment Selection Session</relationshipLabel>
        <relationshipName>paysessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_sepaformat__c</fullName>
        <description>SEPA XML File Format</description>
        <inlineHelpText>When the SEPA Export feature is enabled, this field controls the country standards that will be used when creating the XML file.  The value here defaults from the Bank Account for this session.</inlineHelpText>
        <label>SEPA XML File Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BANKGIRO</fullName>
                </value>
                <value>
                    <fullName>Standard Format DE</fullName>
                </value>
                <value>
                    <fullName>Standard Format EU</fullName>
                </value>
                <value>
                    <fullName>Standard Format V3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__paysession_sessionid__c</fullName>
        <inlineHelpText>A unique auto-assigned value that represents this specific session</inlineHelpText>
        <label>Session ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_status__c</fullName>
        <inlineHelpText>Indicates status of this session. Options are

In-Process (note that only one In-Process session can be open for a given Company)
Suspended (note that session is Suspended when using Save Session)
Cancelled
Completed
Completed with Errors</inlineHelpText>
        <label>Session Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Process</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed With Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__paysession_totdisctknamt__c</fullName>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__paysessvend__c.rstkf__paysessvend_totdisctknamt__c</summarizedField>
        <summaryForeignKey>rstkf__paysessvend__c.rstkf__paysessvend_paysession__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_totnetpay__c</fullName>
        <inlineHelpText>The sum of all of the payment amounts for payable items selected for payment in this Payment Selection Session</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__paysessvend__c.rstkf__paysessvend_totnetpay__c</summarizedField>
        <summaryForeignKey>rstkf__paysessvend__c.rstkf__paysessvend_paysession__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_totnetpaybank__c</fullName>
        <label>Net Payment Amount - Bank Currency</label>
        <summarizedField>rstkf__paysessvend__c.rstkf__paysessvend_totnetpaybank__c</summarizedField>
        <summaryForeignKey>rstkf__paysessvend__c.rstkf__paysessvend_paysession__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_totnetpayeftbank__c</fullName>
        <description>paysession_totnetpayeftbank__c</description>
        <inlineHelpText>This field contains the total of Net Payment Amount in Bank Currency of all EFT Transactions in the session.</inlineHelpText>
        <label>Net EFT Payment Amount – Bank Currency</label>
        <summarizedField>rstkf__paysessvend__c.rstkf__paysessvend_totnetpaybank__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__paysessvend__c.rstkf__paysessvend_paytype__c</field>
            <operation>equals</operation>
            <value>EFT</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__paysessvend__c.rstkf__paysessvend_paysession__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_totseldiscavail__c</fullName>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__paysessvend__c.rstkf__paysessvend_discavailable__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__paysessvend__c.rstkf__paysessvend_selectpayind__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__paysessvend__c.rstkf__paysessvend_paysession__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_totseldiscavailbank__c</fullName>
        <description>Discount Available Total</description>
        <inlineHelpText>This field contains the sum of the Discount Available in Bank Currency from all invoices in this Payment Session</inlineHelpText>
        <label>Discount Available Total</label>
        <summarizedField>rstkf__paysessvend__c.rstkf__paysessvend_discavailablebank__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__paysessvend__c.rstkf__paysessvend_selectpayind__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__paysessvend__c.rstkf__paysessvend_paysession__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_totseldisctknamtbank__c</fullName>
        <description>Discount Taken Total</description>
        <inlineHelpText>This field contains the sum of the Discount Available in Bank Currency from all invoices in this Payment Session</inlineHelpText>
        <label>Discount Taken Total</label>
        <summarizedField>rstkf__paysessvend__c.rstkf__paysessvend_totdisctknamtbank__c</summarizedField>
        <summaryForeignKey>rstkf__paysessvend__c.rstkf__paysessvend_paysession__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_totselnetopenamt__c</fullName>
        <inlineHelpText>The sum of all the Net Open Amounts from each payable item in this Payment Selection Session</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__paysessvend__c.rstkf__paysessvend_netopenamt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__paysessvend__c.rstkf__paysessvend_selectpayind__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__paysessvend__c.rstkf__paysessvend_paysession__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_vendorsel__c</fullName>
        <inlineHelpText>Can select &apos;All&apos; for all Vendors associated with the Payment Selection Session Company</inlineHelpText>
        <label>Vendor Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>By AP Responsible User</fullName>
                </value>
                <value>
                    <fullName>By Bank Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payment Selection Session</label>
    <listViews>
        <fullName>rstkf__Complete_Successfully</fullName>
        <columns>NAME</columns>
        <columns>rstkf__paysession_glcmp__c</columns>
        <columns>rstkf__paysession_sessionid__c</columns>
        <columns>rstkf__paysession_lastcheckno__c</columns>
        <columns>rstkf__paysession_status__c</columns>
        <columns>rstkf__paysession_paymenttype__c</columns>
        <columns>rstkf__paysession_glbankacct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstkf__paysession_netopenamt__c</columns>
        <columns>rstkf__paysession_period__c</columns>
        <columns>rstkf__paysession_glyear__c</columns>
        <columns>rstkf__paysession_checkdate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__paysession_vendorsel__c</columns>
        <columns>rstkf__paysession_respuser__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__paysession_status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Complete Successfully</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__NP_Payment_Selection</fullName>
        <columns>NAME</columns>
        <columns>rstkf__paysession_glcmp__c</columns>
        <columns>rstkf__paysession_sessionid__c</columns>
        <columns>rstkf__paysession_lastcheckno__c</columns>
        <columns>rstkf__paysession_status__c</columns>
        <columns>rstkf__paysession_paymenttype__c</columns>
        <columns>rstkf__paysession_glbankacct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstkf__paysession_netopenamt__c</columns>
        <columns>rstkf__paysession_period__c</columns>
        <columns>rstkf__paysession_glyear__c</columns>
        <columns>rstkf__paysession_checkdate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__paysession_vendorsel__c</columns>
        <columns>rstkf__paysession_respuser__c</columns>
        <filterScope>Everything</filterScope>
        <label>NP Payment Selection</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__Payment_Selection</fullName>
        <columns>NAME</columns>
        <columns>rstkf__paysession_glcmp__c</columns>
        <columns>rstkf__paysession_sessionid__c</columns>
        <columns>rstkf__paysession_lastcheckno__c</columns>
        <columns>rstkf__paysession_status__c</columns>
        <columns>rstkf__paysession_paymenttype__c</columns>
        <columns>rstkf__paysession_glbankacct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstkf__paysession_netopenamt__c</columns>
        <columns>rstkf__paysession_period__c</columns>
        <columns>rstkf__paysession_glyear__c</columns>
        <columns>rstkf__paysession_checkdate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__paysession_vendorsel__c</columns>
        <columns>rstkf__paysession_respuser__c</columns>
        <filterScope>Everything</filterScope>
        <label>Payment Selection</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__Payment_Selection1</fullName>
        <columns>NAME</columns>
        <columns>rstkf__paysession_glcmp__c</columns>
        <columns>rstkf__paysession_sessionid__c</columns>
        <columns>rstkf__paysession_status__c</columns>
        <columns>rstkf__paysession_paymenttype__c</columns>
        <columns>rstkf__paysession_glbankacct__c</columns>
        <columns>rstkf__paysession_checkdate__c</columns>
        <columns>rstkf__paysession_totnetpay__c</columns>
        <columns>rstkf__paysession_totnetpaybank__c</columns>
        <columns>rstkf__paysession_period__c</columns>
        <columns>rstkf__paysession_glyear__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__paysession_lastcheckno__c</columns>
        <filterScope>Everything</filterScope>
        <label>Payment Selection</label>
    </listViews>
    <listViews>
        <fullName>rstkf__Payment_Selection_EFT2</fullName>
        <columns>NAME</columns>
        <columns>rstkf__paysession_glcmp__c</columns>
        <columns>rstkf__paysession_sessionid__c</columns>
        <columns>rstkf__paysession_lastcheckno__c</columns>
        <columns>rstkf__paysession_status__c</columns>
        <columns>rstkf__paysession_paymenttype__c</columns>
        <columns>rstkf__paysession_glbankacct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstkf__paysession_netopenamt__c</columns>
        <columns>rstkf__paysession_period__c</columns>
        <columns>rstkf__paysession_glyear__c</columns>
        <columns>rstkf__paysession_checkdate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__paysession_vendorsel__c</columns>
        <columns>rstkf__paysession_respuser__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__paysession_paymenttype__c</field>
            <operation>equals</operation>
            <value>EFT,All</value>
        </filters>
        <filters>
            <field>rstkf__paysession_status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>rstkf__paysession_glcmp__c</field>
            <operation>equals</operation>
            <value>Western Widget Works (WWW)</value>
        </filters>
        <label>Payment Selection EFT WWW</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Payment_Selection_Session_Filtered</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstkf__paysession_glcmp__c</columns>
        <columns>rstkf__paysession_sessionid__c</columns>
        <columns>rstkf__paysession_numbinv__c</columns>
        <columns>rstkf__paysession_status__c</columns>
        <columns>rstkf__paysession_paymenttype__c</columns>
        <columns>rstkf__paysession_glbankacct__c</columns>
        <columns>rstkf__paysession_checkdate__c</columns>
        <columns>rstkf__paysession_totnetpay__c</columns>
        <columns>rstkf__paysession_period__c</columns>
        <columns>rstkf__paysession_glyear__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__paysession_lastcheckno__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__paysession_status__c</field>
            <operation>equals</operation>
            <value>Suspended,Cancelled,Completed</value>
        </filters>
        <label>Payment Selection Session - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Payment Selection Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Selection Session</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>